# WeatherGenerator

./: .gitignore  INSTALL.md  pyproject.toml  submit_ssw_validation.sh
.github/ISSUE_TEMPLATE/: initiative.yml  task.yml
.github/workflows/: issue_set_label.yml  pr_assign_labels_cron.yml
ci/: cscs.yaml
config/: config_dinov2.yml  config_era5_georing_avhrr.yml  config_era5_georing_avhrr_masking.yml  config_forecasting.yml  config_forecasting_eerie.yml  config_forecasting_finetuning.yml  config_jepa.yml  config_jepa_finetuning.yml  config_jepa_forecasting_finetuning.yml  config_operan_georing_avhrr_forecasting_lowres.yml  config_performance_default.yml  config_performance_jepa.yml  config_physical_jepa.yml  config_strato_ml.yml  config_strato_ml_with_pl.yml  config_strato_mlpl.yml  config_strato_mlpl_ens.yml  config_strato_mlpl_ens_finetuning.yml  default_config.yml
config/evaluate/: config_zarr2cf.yaml  config_zarr2verif.yaml  eval_config.yml  eval_config_default.yml  ssw_feb2018.yml  ssw_jan2019.yml  ssw_jan2021.yml
config/profiling/: annotations.json
config/streams/eerie_downscaling/: eerie_atmo.yml  eerie_ocean_elem.yml  eerie_ocean_node.yml
config/streams/eerie_gridded/: eerie_atmo.yml  eerie_ocean_elem.yml  eerie_ocean_node.yml
config/streams/eerie_native/: eerie_atmo.yml  eerie_ocean_elem.yml  eerie_ocean_node.yml
config/streams/era5_1deg/: era5.yml
config/streams/era5_1deg_forecasting/: era5.yml
config/streams/era5_1deg_levante/: era5.yml
config/streams/era5_georing_avhrr/: avhrr.yml  era5.yml  era5_out.yml  geos.yml
config/streams/era5_ml_strato/: era5ml.yml
config/streams/era5_ml_strato_with_pl/: era5ml.yml  era5pl.yml
config/streams/era5_mlpl_strato/: era5ml.yml  era5pl.yml
config/streams/era5_mlpl_strato_ens/: era5ml.yml  era5pl.yml
config/streams/era5_mlpl_strato_ens_inference/: era5ml.yml  era5pl.yml
config/streams/era5_mlpl_strato_inference/: era5ml.yml  era5pl.yml
config/streams/era5_nppatms_synop/: era5.yml
config/streams/operan_georing_avhrr_synop_lowres/: avhrr.yml  era5.yml  era5_out.yml  geos.yml  synop.yml
config/streams/streams_anemoi/: era5.yml
config/streams/streams_test/: era5.yml
database/: cerra.jsonnet  common.jsonnet  era5_v8.jsonnet  functions.libsonnet  imerg.jsonnet  merged.jsonnet  opera.jsonnet  seviri.jsonnet  synop.jsonnet
database/jsons/: era5v8.json  npp-atms.json  synop.json
docs/: evaluate_config_reference.md
integration_tests/: export_test.py  small1.yaml  small1.yml  small1_test.py  small_multi_stream.yaml  small_multi_stream_test.py
scripts/: actions.sh  release-model.py
src/weathergen/: __init__.py  run_train.py
src/weathergen/datasets/: anemoi_dataset.py  batch.py  data_reader_anemoi.py  data_reader_base.py  data_reader_fesom.py  data_reader_obs.py  fesom_dataset.py  icon_dataset.py  masking.py  multi_stream_data_sampler.py  stream_data.py  tokenizer_forecast.py  tokenizer_masking.py  tokenizer_utils.py  utils.py
src/weathergen/model/: attention.py  blocks.py  ema.py  embeddings.py  encoder.py  engines.py  model.py  model_interface.py  positional_encoding.py
src/weathergen/train/: loss_calculator.py  target_and_aux_module_base.py  target_and_aux_ssl_teacher.py  target_and_aux_utils.py  teacher_utils.py  trainer.py  trainer_base.py  utils.py
src/weathergen/train/loss_modules/: loss_functions.py  loss_module_physical.py
src/weathergen/utils/: better_abc.py  cli.py  config.py  distributed.py  logger.py  metrics.py  performance.py  plot_training.py  profiling.py  train_logger.py  validation_io.py
stac/: merged.jsonnet  nppatms.jsonnet  synop.jsonnet
stac/jsons/: catalogue.json  cerra.json  imerg.json  opera.json  seviri.json  synop.json
tests/: test_cli.py  test_config.py  test_encoder_teacher.py  test_per_stream_masking_override.py  test_performance_utils.py  test_sht_roundtrip.py
